# Real-Time-cyber-Forge-Agentic-AI

./: .gitignore  AGENTIC_SYSTEM_COMPLETE.md  AUTONOMOUS_AGENT_README.md  CYBERFORGE_FULL_SYSTEM_README.md  DESKTOP_APP_AI_ENHANCEMENT.md  DESKTOP_APP_RESTRUCTURE_SUMMARY.md  ENHANCED-DESKTOP-README.md  ENHANCED-README.md  FIXES_APPLIED.md  FREE_AI_MIGRATION_SUMMARY.md  GEMINI_API_TEST.md  GEMINI_MIGRATION_COMPLETE.md  GEMINI_MIGRATION_SUMMARY.md  HEROKU_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DESKTOP.md  INSTRUCTIONS.md  LICENSE  OTX_INTEGRATION_SUMMARY.md  OTX_QUICKSTART.md  OTX_VISUALIZATION_GUIDE.md  QUICK-START.md  QUICK_START.md  README.md  SETUP_GUIDE.md  VERSION3.md  _otx50.json  _otx_sub.json  agent.md  app.json  demoscenes.txt  description.md  docker-compose.yml  features_roadmap.md  generate-screenshots.js  generate_svg_v2.js  generate_svg_v3.js  generate_svg_v4.js  generate_svg_v5.js  generate_svg_v6.js  (+22 more)
.claude/: settings.json
backend/: .env.example  .mlref.txt  .mlroutes.txt  README.md  appwrite.config.json  package-lock.json  package.json  test-ml-integration.js  test-todo1.js
backend/public/: cyberforge.css  cyberforge.js  index.html
backend/scripts/: setup-appwrite-schema.js
backend/src/: server.js
cyberforge-landing/: cyberforge.html  cyberforge.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
cyberforge-landing/src/: App.tsx  index.css
desktop/: .gitignore  AUTH_FIX_STATUS.md  BUILD.md  README.md  package-lock.json  package.json
desktop-app/: .env.example  .gitignore  README.md  START-DESKTOP-APP.md  demo.html  enhanced-demo.html  package-lock.json  package.json  test-browser-detection.js
desktop-app/config/: browser_intelligence.json
desktop-app/src/: main.js  main.js.backup  preload.js  tauri-bridge.js
desktop-app/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/icons/.pre-forge-backup/: icon.icns
desktop-app/src-tauri/src/: auth.rs  commands.rs  main.rs  state.rs  system.rs  telemetry_loop.rs  websocket.rs
desktop-app/src-tauri/src/distributed/: intelligence_listener.rs  mod.rs  node_identity.rs  sync_manager.rs
desktop-app/src-tauri/src/system/: browser_detector.rs  browser_intelligence.rs  mod.rs  os_info.rs  process_checker.rs  telemetry.rs  url_monitor.rs
desktop/scripts/: download-fonts.js  inline-fonts.js  uninstall.ps1  uninstall.sh
desktop/src-tauri/: .chk.err  .chk.status  Cargo.toml  hf_config.example.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent.rs  auth.rs  blocking.rs  commands.rs  http.rs  lib.rs  main.rs  memory.rs  metrics.rs  ml.rs  policy.rs  state.rs  system.rs
desktop/ui/: index.html
docs/: APPWRITE_SETUP.md  MASTER_THESIS_CYBERFORGE_DISSERTATION_DRAFT.md  QUICK_START.md  TODO_1_IMPLEMENTATION.md  TODO_1_QUICKSTART.md  TODO_1_SUMMARY.md  UI_REDESIGN_SUMMARY.md  UI_REDESIGN_VISUAL_GUIDE.md
docs/api/: api-reference.md
docs/architecture/: system-architecture.md
docs/screenshots/: ai-assistant.md  analytics.md  api-management.md  dashboard.md  database-connector.md  preview.html  sidebar.md  threat-center.md
landing-page/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
landing-page/components/: Download.js  Features.js  Footer.js  Hero.js  HowItWorks.js  Navbar.js
ml-services/: .env.example  =0.3.0  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  ML_INFRASTRUCTURE_PLAN.md  README.md  demo_gemini_integration.py  deploy_hf_space.sh  deploy_models.py  final_validation.py  fix_all_notebooks.py  fix_cells.py  fix_gemini_deploy.py  fix_pipeline.py  fix_syntax.py  fixed_requirements.txt  hf_app.py  hf_readme.md  hf_requirements.txt  main.py  notebook_config.json  push_notebooks.py  requirements.txt  simple_app.py  test_ai_agent_training.py  test_api.py  test_dataset_manager.py  test_gemini_integration.py  test_service_startup.py  test_simple_gemini.py  train_and_upload_models.py  update_notebooks_todo1.py  upload_datasets.py  upload_fix.py  upload_models_to_hf.py  upload_notebooks.py
mobile-app/: .gitignore  App.js  README.md  app.json  babel.config.js  package-lock.json  package.json
phishing-test-sites/: README.md
screenshots/: .gitkeep
scripts/: generate_screen_pages.js
thesis/: CHe Haggai.docx  chapter_1_introduction.md  chapter_2_literature_review.md  chapter_3_materials_and_methods.md  chapter_4_results_and_discussions.md  chapter_5_conclusion_and_recommendation.md  list of abbreviations.md  references.md
updates/: Cyber Forge.html  forge-app.jsx
(+615 files in other folders)
