[package]
name = "cyberforge-console"
version = "1.0.0"
description = "CyberForge — AI Security Console (Tauri desktop shell)"
authors = ["CyberForge"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# The library that holds the Tauri app logic. Named `*_lib` so it never clashes
# with the binary target on Windows. `main.rs` is a thin wrapper around `run()`.
[lib]
name = "cyberforge_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Backend authentication (login/register) — calls run from Rust to avoid browser
# CORS, exactly like the existing desktop-app. Tokens are kept in the OS keychain.
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
keyring = "3"

[features]
# This feature is used for production builds where `devtools` is disabled.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
