[package]
name = "cyberforge-console"
version = "1.0.0"
description = "CyberForge — AI Security Console (Tauri desktop shell)"
authors = ["CyberForge"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# The library that holds the Tauri app logic. Named `*_lib` so it never clashes
# with the binary target on Windows. `main.rs` is a thin wrapper around `run()`.
[lib]
name = "cyberforge_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Backend authentication (login/register) — calls run from Rust to avoid browser
# CORS, exactly like the existing desktop-app. Tokens are kept in the OS keychain.
# `tokio` must expose the IO/net + multi-thread reactor that `reqwest` polls on;
# the proven desktop-app uses "full", so we match it. Narrowing this (e.g. to
# just sync+time) starves reqwest of the IO driver and every request fails with
# "error sending request for url (...)" even though the server is healthy.
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
keyring = "3"
# Real local telemetry for the floating agent panel (CPU / memory / uptime,
# running-browser detection) — same crate the desktop-app uses.
sysinfo = "0.32"
# Read the user's REAL browser history (Chrome/Edge/Brave `urls`, Firefox
# `moz_places`) so the agent can scan actually-visited URLs in real time — no
# browser extension required. `bundled` compiles SQLite in (no system dep).
rusqlite = { version = "0.32", features = ["bundled"] }

# Windows-only: read the foreground window title so we can identify the active
# browser tab the user is actually looking at (priority target for real-time
# scanning). Only the two UI feature groups we call are pulled in.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# This feature is used for production builds where `devtools` is disabled.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
